
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct soc_camera_link {int dummy; } ;
struct soc_camera_device {int dummy; } ;


 unsigned long SOCAM_DATAWIDTH_8 ;
 unsigned long SOCAM_DATA_ACTIVE_HIGH ;
 unsigned long SOCAM_HSYNC_ACTIVE_HIGH ;
 unsigned long SOCAM_MASTER ;
 unsigned long SOCAM_PCLK_SAMPLE_RISING ;
 unsigned long SOCAM_VSYNC_ACTIVE_HIGH ;
 unsigned long soc_camera_apply_sensor_flags (struct soc_camera_link*,unsigned long) ;
 struct soc_camera_link* to_soc_camera_link (struct soc_camera_device*) ;

__attribute__((used)) static unsigned long mt9m111_query_bus_param(struct soc_camera_device *icd)
{
 struct soc_camera_link *icl = to_soc_camera_link(icd);
 unsigned long flags = SOCAM_MASTER | SOCAM_PCLK_SAMPLE_RISING |
  SOCAM_HSYNC_ACTIVE_HIGH | SOCAM_VSYNC_ACTIVE_HIGH |
  SOCAM_DATA_ACTIVE_HIGH | SOCAM_DATAWIDTH_8;

 return soc_camera_apply_sensor_flags(icl, flags);
}
