; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m111.c_mt9m111_query_bus_param.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m111.c_mt9m111_query_bus_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.soc_camera_device = type { i32 }
%struct.soc_camera_link = type { i32 }

@SOCAM_MASTER = common dso_local global i64 0, align 8
@SOCAM_PCLK_SAMPLE_RISING = common dso_local global i64 0, align 8
@SOCAM_HSYNC_ACTIVE_HIGH = common dso_local global i64 0, align 8
@SOCAM_VSYNC_ACTIVE_HIGH = common dso_local global i64 0, align 8
@SOCAM_DATA_ACTIVE_HIGH = common dso_local global i64 0, align 8
@SOCAM_DATAWIDTH_8 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.soc_camera_device*)* @mt9m111_query_bus_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mt9m111_query_bus_param(%struct.soc_camera_device* %0) #0 {
  %2 = alloca %struct.soc_camera_device*, align 8
  %3 = alloca %struct.soc_camera_link*, align 8
  %4 = alloca i64, align 8
  store %struct.soc_camera_device* %0, %struct.soc_camera_device** %2, align 8
  %5 = load %struct.soc_camera_device*, %struct.soc_camera_device** %2, align 8
  %6 = call %struct.soc_camera_link* @to_soc_camera_link(%struct.soc_camera_device* %5)
  store %struct.soc_camera_link* %6, %struct.soc_camera_link** %3, align 8
  %7 = load i64, i64* @SOCAM_MASTER, align 8
  %8 = load i64, i64* @SOCAM_PCLK_SAMPLE_RISING, align 8
  %9 = or i64 %7, %8
  %10 = load i64, i64* @SOCAM_HSYNC_ACTIVE_HIGH, align 8
  %11 = or i64 %9, %10
  %12 = load i64, i64* @SOCAM_VSYNC_ACTIVE_HIGH, align 8
  %13 = or i64 %11, %12
  %14 = load i64, i64* @SOCAM_DATA_ACTIVE_HIGH, align 8
  %15 = or i64 %13, %14
  %16 = load i64, i64* @SOCAM_DATAWIDTH_8, align 8
  %17 = or i64 %15, %16
  store i64 %17, i64* %4, align 8
  %18 = load %struct.soc_camera_link*, %struct.soc_camera_link** %3, align 8
  %19 = load i64, i64* %4, align 8
  %20 = call i64 @soc_camera_apply_sensor_flags(%struct.soc_camera_link* %18, i64 %19)
  ret i64 %20
}

declare dso_local %struct.soc_camera_link* @to_soc_camera_link(%struct.soc_camera_device*) #1

declare dso_local i64 @soc_camera_apply_sensor_flags(%struct.soc_camera_link*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
